--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ thead th, tbody td{ padding:.55rem .55rem; }
   <footer class="site-footer">Limerick GAA Hub · 2025</footer>
 
   <!-- JS -->
-  <script src="./js/app_v7_3_3.js?v=fix11"></script>
+  <script src="/js/app_v7_3_3.js?v=fix11" defer></script>
   <script>
     // Burger
     (function(){
