--- a/index.html
+++ b/index.html
@@ -396,17 +396,17 @@ thead th, tbody td{ padding:.55rem .55rem; }
 
   <footer class="site-footer">Limerick GAA Hub · 2025</footer>
 
-  <!-- JS -->
+    <!-- JS -->
   <script src="/js/app_v7_3_3.fix12.js" defer></script>
   <script>
-  window.addEventListener('load', () => {
-    console.log("[LGH] onload flags:",
-      "LGH_V7_3_READY =", window.LGH_V7_3_READY,
-      "LGH_V7_3_3_READY =", window.LGH_V7_3_3_READY
-    );
-  });
-</script>
-  <script>
+    // Inline logger to confirm flags at load
+    window.addEventListener('load', () => {
+      console.log("[LGH] onload flags:",
+        "LGH_V7_3_READY =", window.LGH_V7_3_READY,
+        "LGH_V7_3_3_READY =", window.LGH_V7_3_3_READY
+      );
+    });
+
     // Burger
     (function(){
       const burger=document.getElementById('burger'), oc=document.getElementById('offcanvas'), bd=document.getElementById('oc-backdrop');
@@ -465,26 +465,22 @@ thead th, tbody td{ padding:.55rem .55rem; }
       document.querySelector('#view-tabs .vt[data-target="group-panel"]').click();
     });
 
+    // Warn if app didn't init (tolerant)
+    window.addEventListener('load', () => {
+      setTimeout(() => {
+        const ok = (window.LGH_V7_3_3_READY === true) || (window.LGH_V7_3_READY === true);
+        if (!ok) {
+          document.getElementById('lgh-warning').style.display = 'block';
+          console.error("[LGH] Warning shown: READY flags not true at load.");
+        } else {
+          console.log("[LGH] App ready; warning suppressed.");
+        }
+        // Ensure default view on first load
+        document.getElementById('g-standings').style.display = 'none';
+        document.querySelector('.matches-wrap').style.display = '';
+      }, 50);
+    });
 
-    <!-- Warn if app didn't init (tolerant) -->
-<script>
-  window.addEventListener('load', () => {
-    setTimeout(() => {
-      const ok = (window.LGH_V7_3_3_READY === true) || (window.LGH_V7_3_READY === true);
-      if (!ok) {
-        document.getElementById('lgh-warning').style.display = 'block';
-        console.error("[LGH] Warning shown: READY flags not true at load.");
-      } else {
-        console.log("[LGH] App ready; warning suppressed.");
-      }
-      // Ensure default view on first load
-      document.getElementById('g-standings').style.display = 'none';
-      document.querySelector('.matches-wrap').style.display = '';
-    }, 50);
-  });
-</script>
-
-    
     // Blur selects on Android to close pickers
     (function(){
       ['team','status','date-jump'].forEach(id=>{
