--- a/index.html
+++ b/index.html
@@ -5,12 +5,45 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 <title>Limerick GAA Hub</title>
 <meta name="color-scheme" content="light only">
+
+<!-- Meta description -->
+<meta name="description" content="Fixtures, results and tables for Limerick GAA — fast, clean, mobile-first. Filter by competition, team, or date.">
+
+<!-- Open Graph -->
+<meta property="og:title" content="Limerick GAA Hub">
+<meta property="og:description" content="Fixtures, results and tables for Limerick GAA — fast, clean, mobile-first.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://limerickgaahub.github.io/">
+<meta property="og:image" content="https://limerickgaahub.github.io/favicon-32x32.png">
+
+<!-- X/Twitter Cards -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Limerick GAA Hub">
+<meta name="twitter:description" content="Fixtures, results and tables for Limerick GAA — fast, clean, mobile-first.">
+<meta name="twitter:image" content="https://limerickgaahub.github.io/favicon-32x32.png">
+<meta name="twitter:site" content="@limerickgaahub">
+
+<!-- Favicons -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="shortcut icon" href="/favicon.ico">
+
+<!-- Optional: Social + security niceties -->
+<meta http-equiv="Content-Security-Policy"
+      content="default-src 'self'; img-src 'self' https: data:; style-src 'self' https://cdnjs.cloudflare.com 'unsafe-inline'; script-src 'self' https://cdnjs.cloudflare.com; connect-src 'self'; base-uri 'self'; form-action 'none'; upgrade-insecure-requests">
+<meta name="referrer" content="no-referrer-when-downgrade">
+
+<!-- FontAwesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
 <style>
 /* THEME */
 :root{
   --card:#ffffff; --muted:#6b7280; --accent:#006B3C; --accent-2:#88C999;
   --line:#e9ecef; --text:#111; --bg:#f6f7f8;
+
 }
 *{ box-sizing:border-box; }
 html{ -webkit-text-size-adjust:100%; text-size-adjust:100%; }
