--- a/index.html
+++ b/index.html
@@ -7,31 +7,44 @@
 <meta name="color-scheme" content="light only">
 
 <!-- Meta description -->
-<meta name="description" content="Fixtures, results and tables for Limerick GAA — fast, clean, mobile-first. Filter by competition, team, or date.">
+<meta name="description" content="Fixtures, results and tables for Limerick GAA Filter by competition, team, or date.">
 
-<!-- Open Graph -->
+<!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
 <meta property="og:title" content="Limerick GAA Hub">
-<meta property="og:description" content="Fixtures, results and tables for Limerick GAA — fast, clean, mobile-first.">
+<meta property="og:description" content="Fixtures, results and tables for Limerick GAA Filter by competition, team, or date.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://limerickgaahub.github.io/">
-<meta property="og:image" content="https://limerickgaahub.github.io/favicon-32x32.png">
+<meta property="og:image" content="https://limerickgaahub.github.io/android-chrome-512x512.png">
 
-<!-- X/Twitter Cards -->
-<meta name="twitter:card" content="summary">
+<!-- X / Twitter Cards -->
+<meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Limerick GAA Hub">
-<meta name="twitter:description" content="Fixtures, results and tables for Limerick GAA — fast, clean, mobile-first.">
-<meta name="twitter:image" content="https://limerickgaahub.github.io/favicon-32x32.png">
+<meta name="twitter:description" content="Fixtures, results and tables for Limerick GAA Filter by competition, team, or date.">
+<meta name="twitter:image" content="https://limerickgaahub.github.io/android-chrome-512x512.png">
 <meta name="twitter:site" content="@limerickgaahub">
 
-<!-- Favicons -->
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<!-- Favicons & app icons -->
+<!-- SVG (modern browsers) -->
+<link rel="icon" href="/favicon.svg" type="image/svg+xml">
+
+<!-- Classic PNG favicons -->
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+
+<!-- ICO fallback -->
 <link rel="shortcut icon" href="/favicon.ico">
 
-<!-- FontAwesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+<!-- Apple Touch -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<meta name="apple-mobile-web-app-title" content="Limerick GAA Hub">
+
+<!-- Android / PWA -->
+<link rel="manifest" href="/site.webmanifest">
+
+<!-- Font Awesome -->
+<link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
 <style>
 /* THEME */
