--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <meta name="color-scheme" content="light only">
 
 <!-- Meta description -->
-<meta name="description" content="Fixtures, results and tables for Limerick GAA Filter by competition, team, or date.">
+<meta name="description" content="Fixtures, results and tables for Limerick GAA. Filter by competition, team, or date.">
 
 <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
 <meta property="og:title" content="Limerick GAA Hub">
-<meta property="og:description" content="Fixtures, results and tables for Limerick GAA Filter by competition, team, or date.">
+<meta property="og:description" content="Fixtures, results and tables for Limerick GAA. Filter by competition, team, or date.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://limerickgaahub.github.io/">
 <meta property="og:image" content="https://limerickgaahub.github.io/android-chrome-512x512.png">
@@ -19,7 +19,7 @@
 <!-- X / Twitter Cards -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Limerick GAA Hub">
-<meta name="twitter:description" content="Fixtures, results and tables for Limerick GAA Filter by competition, team, or date.">
+<meta name="twitter:description" content="Fixtures, results and tables for Limerick GAA. Filter by competition, team, or date.">
 <meta name="twitter:image" content="https://limerickgaahub.github.io/android-chrome-512x512.png">
 <meta name="twitter:site" content="@limerickgaahub">
 
